# greenblatt

./: .dockerignore  .env.example  .env.staging.example  .gitignore  README.md  architecture.md  cloud_infrastructure_plan.md  cloud_staging_plan.md  commercial_content_plan.md  compose.dev.yml  compose.yml  contributor_guide.md  implementation_plan.md  manual_smoke_test_guide.md  nice_to_have_implementation_plan.md  product_plan.md  pyproject.toml  release_notes.md  technical_requirements.md
.github/workflows/: ci.yml  release-staging.yml
backend/: Dockerfile  celerybeat-schedule  manage.py  requirements.txt
backend/apps/accounts/: serializers.py  tests.py  urls.py  (+1 more)
backend/config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
infra/: compose.staging.yml  operations.md
infra/caddy/: Caddyfile
infra/scripts/: backup_artifacts.sh  backup_postgres.sh  common.sh  deploy_staging.sh  restore_artifacts.sh  restore_postgres.sh  rollback_staging.sh  smoke_test.sh
results/: us_top_25.csv  us_top_300.csv
results/eu_backtest/: equity_curve.csv  summary.json  trades.csv
results/us_backtest/: equity_curve.csv  final_holdings.csv  review_targets.csv  summary.json  trade_summary.csv  trades.csv
src/greenblatt/: __init__.py  cli.py  engine.py  models.py  services.py  simulation.py  universe.py  utils.py
tests/: test_cli.py  test_engine.py  test_provider.py  test_provider_cache.py  test_services.py  test_simulation.py
(+176 files in other folders)
